--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,10 @@
 [package]
-name = "git_patch_simplifier"
-version = "0.1.0"
+name = "git_diff_applier"
+version = "1.0.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 colored = "2.1.0"
+reqwest = { version = "0.12.4", features = ["blocking"] }
